--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,15 @@
         "filesystem": "cpp",
         "iosfwd": "cpp",
         "typeindex": "cpp",
-        "typeinfo": "cpp"
+        "typeinfo": "cpp",
+        "deque": "cpp",
+        "list": "cpp",
+        "map": "cpp",
+        "optional": "cpp",
+        "set": "cpp",
+        "stack": "cpp",
+        "unordered_map": "cpp",
+        "variant": "cpp",
+        "vector": "cpp"
     }
 }
